trybuild_tests/tests/trybuild/fail/model_vec_field.stderr
error[E0277]: the trait bound `Vec<String>: ToSql` is not satisfied
 --> tests/trybuild/fail/model_vec_field.rs:4:1
  |
4 | #[model]
  | ^^^^^^^^ the trait `ToSql` is not implemented for `Vec<String>`
  |
  = help: the trait `ToSql` is implemented for `Vec<u8>`
  = note: required for `SqlVal` to implement `From<Vec<String>>`
  = note: required for `Vec<String>` to implement `Into<SqlVal>`
note: required by a bound in `FieldExpr`
 --> $WORKSPACE/butane_core/src/query/fieldexpr.rs
  |
  | pub struct FieldExpr<T>
  |            --------- required by a bound in this struct
  | where
  |     T: Into<SqlVal>,
  |        ^^^^^^^^^^^^ required by this bound in `FieldExpr`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<String>: FieldType` is not satisfied
 --> tests/trybuild/fail/model_vec_field.rs:8:11
  |
8 |     tags: Vec<String>,
  |           ^^^^^^^^^^^ the trait `FieldType` is not implemented for `Vec<String>`
  |
  = help: the trait `FieldType` is implemented for `Vec<u8>`

error[E0277]: the trait bound `Vec<String>: FromSql` is not satisfied
 --> tests/trybuild/fail/model_vec_field.rs:4:1
  |
4 | #[model]
  | ^^^^^^^^ the trait `FromSql` is not implemented for `Vec<String>`
  |
  = help: the trait `FromSql` is implemented for `Vec<u8>`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<String>: ToSql` is not satisfied
 --> tests/trybuild/fail/model_vec_field.rs:4:1
  |
4 | #[model]
  | ^^^^^^^^ the trait `ToSql` is not implemented for `Vec<String>`
  |
  = help: the trait `ToSql` is implemented for `Vec<u8>`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `new` exists for struct `FieldExpr<Vec<String>>`, but its trait bounds were not satisfied
 --> tests/trybuild/fail/model_vec_field.rs:4:1
  |
4 | #[model]
  | ^^^^^^^^ function or associated item cannot be called on `FieldExpr<Vec<String>>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Vec<String>: ToSql`
          which is required by `Vec<String>: Into<SqlVal>`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
